--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,22 @@
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.9
+aiosignal==1.3.1
 asgiref==3.8.1
+attrs==24.2.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 Django==5.1.3
+django-countries==7.6.1
 django-jazzmin==3.0.1
+frozenlist==1.5.0
+geoip2==4.8.1
 idna==3.10
+maxminddb==2.6.2
+multidict==6.1.0
 pillow==11.0.0
+propcache==0.2.1
 requests==2.32.3
 sqlparse==0.5.2
+typing_extensions==4.12.2
 urllib3==2.2.3
+yarl==1.18.3
